# React-FastAPI-with-AI

./: README.md
backend/: database.db  pyproject.toml  server.py
backend/src/: .env  ai_generator.py  app.py  utils.py
backend/src/database/: db.py
backend/src/routes/: challenge.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/auth/: AuthenticationPage.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
